--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SD340W22SDLab4Context": "Server=localhost\\SQLEXPRESS;Database=SD-340-W22SD-Lab4;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
